chore: finalize dispensers api
